# authenticator

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: algo_core.rs  auth_ui.rs  main.rs  qr_parser.rs  storage.rs
src/ui/: main_ui.rs  mod.rs  qr_ui.rs
