[package]
name = "authenticator"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core
dioxus = { version = "0.6" }
dioxus-mobile = "0.6"
# Core libraries
totp-rs = "5.7.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.9"
sha2 = "0.10"
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.12"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
mobile = ["dioxus/mobile"]

[[bin]]
name = "authenticator"
path = "src/main.rs"
